--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nrwl/linter": "15.6.2",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "15.6.2",
+    "@nrwl/vite": "15.6.2",
     "@nrwl/webpack": "15.6.2",
     "@nrwl/workspace": "15.6.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
@@ -24,6 +25,7 @@
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "@vitest/ui": "^0.25.8",
     "babel-jest": "28.1.1",
     "cypress": "^12.2.0",
     "eslint": "~8.15.0",
@@ -35,6 +37,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
+    "jsdom": "~20.0.3",
     "nx": "15.6.2",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
@@ -42,9 +45,18 @@
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "vite": "^4.0.1",
+    "vite-plugin-dts": "~1.7.1",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^4.0.2",
+    "vitest": "^0.25.8"
   },
   "dependencies": {
+    "@tiptap/core": "^2.0.0-beta.209",
+    "@tiptap/react": "^2.0.0-beta.209",
+    "@tiptap/starter-kit": "^2.0.0-beta.209",
+    "@tiptap/vue-2": "^2.0.0-beta.209",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tslib": "^2.3.0"
