--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "vitest": "^0.25.8"
   },
   "dependencies": {
+    "@nrwl/web": "^15.6.3",
     "@tiptap/core": "^2.0.0-beta.209",
     "@tiptap/react": "^2.0.0-beta.209",
     "@tiptap/starter-kit": "^2.0.0-beta.209",
